# InverterChargeController

./: .bandit.yml  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Algorithm.drawio  README.md  error_mailer.sh  inverter  pyproject.toml  requirements.txt  sample_solar_forecast.json  solar_forecast_and_power_buy_logger.sh  solar_forecast_logger.sh
misc/: solar_forceast_sample_output.json  tibber_api_query.graphql
source/: abscence_handler.py  database_handler.py  deprecated_sun_forecast_handler.py  energy_amount.py  energy_classes.py  energy_rate.py  environment_variable_getter.py  inverter.py  inverter_charge_controller.py  inverterchargecontroller.py  logger.py  main.py  new_solar_forecast_handler.py  price_slice.py  price_slice_bundle.py  sems_portal_api_handler.py  sun_forecast.py  sun_forecast_api_handler.py  sun_forecast_handler.py  tibber.py  tibber_api_handler.py  time_handler.py
systemd/: inverter-charge-controller-error-mailer.service  inverter-charge-controller-error-mailer.timer  inverter-charge-controller-just-solar-forecast.service  inverter-charge-controller-just-solar-forecast.service.example  inverter-charge-controller-just-solar-forecast.timer  inverter-charge-controller-just-solar-review.service  inverter-charge-controller-just-solar-review.timer  inverter-charge-controller.service  inverter-charge-controller.service.example  inverter-charge-controller.timer
tests/: conftest.py  test_environment_variable_getter.py  test_sems_portal_api_handler.py  test_sun_forecast_handler.py  test_tibber_api_handler.py  test_time_handler.py
